syntax = "proto3";

package fi.simoroikonen.lunchvote;

message EntityId {
  string id = 1;
}